get userinformation by username
